# WinampC

./: CMakeLists.txt  Makefile  WinampC.c  WinampC.html  WinampC.txt  clean.bat  licence.txt  make.bat  makefile.mak  resources.rc
doc/: CMakeLists.txt  WinampC.txt.cmake  WinampC.xml  WinampC.xsl  WinampC.xsl.cmake  extract-services-descriptions.ps1  pattern.txt  services.xml
src/: CMakeLists.txt  Resources.rc  WinampC.c  version.h.cmake
src/include/: powerpro.h
